# native-ai-windows-agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  GUIDE.md  HTTP-SERVER.md  LICENSE  README.md  SECURITY.md  TESTING-GUIDE.md  VOICE-TRANSCRIPTION.md  core_agent_lines.sh
bridge/: README.md  package-lock.json  package.json
bridge/src/: index.ts  server.ts  whatsapp.ts
contrib/: local_whisper_openai_http.py
crates/metis-agent/: Cargo.toml
crates/metis-agent/skills/cron/: SKILL.md
crates/metis-agent/skills/github/: SKILL.md
crates/metis-agent/skills/skill-creator/: SKILL.md
crates/metis-agent/skills/tmux/: SKILL.md
crates/metis-agent/skills/tmux/scripts/: find-sessions.sh
crates/metis-agent/skills/weather/: SKILL.md
crates/metis-agent/src/: agent_loop.rs  context.rs  lib.rs  memory.rs  skills.rs  subagent.rs
crates/metis-agent/src/tools/: base.rs  browser.rs  filesystem.rs  message.rs  mod.rs  registry.rs  shell.rs  spawn.rs  web.rs
crates/metis-channels/: Cargo.toml
crates/metis-channels/src/: base.rs  discord.rs  email.rs  formatting.rs  lib.rs  manager.rs  slack.rs  telegram.rs  whatsapp.rs
crates/metis-cli/: Cargo.toml
crates/metis-cli/src/: agent_builder.rs  channels_cmd.rs  cron_cmd.rs  gateway.rs  heartbeat_cmd.rs  helpers.rs  main.rs  model_cmd.rs  onboard.rs  repl.rs  serve.rs  status.rs
crates/metis-cli/src/desktop/: app.rs  config.rs  mod.rs  models.rs
crates/metis-core/: Cargo.toml  build.rs
crates/metis-core/src/: build.rs  heartbeat.rs  lib.rs  types.rs  utils.rs
crates/metis-core/src/bus/: mod.rs  queue.rs  types.rs
crates/metis-core/src/config/: loader.rs  mod.rs  schema.rs
crates/metis-core/src/session/: manager.rs  mod.rs
crates/metis-cron/: Cargo.toml
crates/metis-cron/src/: lib.rs  service.rs  types.rs
crates/metis-providers/: Cargo.toml
crates/metis-providers/src/: http_provider.rs  lib.rs  ollama.rs  registry.rs  traits.rs  transcription.rs
