[workspace]
members = [
    "crates/metis-core",
    "crates/metis-agent",
    "crates/metis-providers",
    "crates/metis-channels",
    "crates/metis-cron",
    "crates/metis-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Metis contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls"], default-features = false }

# Async trait (for dyn-dispatch async traits)
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Local HTTP agent API (`metis serve`)
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# GUI (pure Rust — egui/eframe)
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }
rustyline = "15"
colored = "3"
dirs-next = "2"

# Testing
wiremock = "0.6"

# Internal crates
metis-core = { path = "crates/metis-core" }
metis-agent = { path = "crates/metis-agent" }
metis-providers = { path = "crates/metis-providers" }
metis-channels = { path = "crates/metis-channels" }
metis-cron = { path = "crates/metis-cron" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip debug symbols
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding
