[package]
name = "metis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI binary for Metis"

[[bin]]
name = "metis"
path = "src/main.rs"

[features]
default = []
telegram = ["metis-channels/telegram"]
discord = ["metis-channels/discord"]
whatsapp = ["metis-channels/whatsapp"]
slack = ["metis-channels/slack"]
email = ["metis-channels/email"]

[dependencies]
metis-core = { workspace = true }
metis-agent = { workspace = true }
metis-providers = { workspace = true }
metis-channels = { workspace = true }
metis-cron = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
colored = { workspace = true }
dirs-next = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
cron = "0.15"

[dev-dependencies]
tempfile = "3"
