[package]
name = "metis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types, bus, config, and utilities for Metis"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
