[package]
name = "metis-cron"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Scheduled task service for Metis"

[dependencies]
metis-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
cron = "0.15"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
