[package]
name = "metis-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM provider HTTP clients for Metis"

[dependencies]
metis-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = "3"

[dev-dependencies]
wiremock = { workspace = true }
